--- a/jwt/package.json
+++ b/jwt/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/mochase/js-exercise#readme",
   "devDependencies": {
     "base64url": "^2.0.0"
+  },
+  "dependencies": {
+    "jwt-simple": "^0.5.5"
   }
 }
